# rhiza-cli

./: .gitignore  .gitignore.rej  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .rhiza.history  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  GETTING_STARTED.md  Makefile  Makefile.rej  PR_DESCRIPTION.md  README.md  REPOSITORY_ANALYSIS.md  RHIZA_UI.md  SECURITY.md.rej  USAGE.md  mkdocs.yml  pr-description.md  pyproject.toml  pytest.ini
.clusterfuzzlite/: Dockerfile  build.sh
.github/: copilot-instructions.md  template.yml
.github/rhiza/: copilot-instructions.md
.github/rhiza/actions/setup-project/: action.yml
.github/scripts/: bump.sh
.github/workflows/: copilot-setup-steps.yml.rej  renovate_rhiza_sync.yml  rhiza.yml  rhiza_book.yml  rhiza_book.yml.rej  rhiza_ci.yml.rej  rhiza_codeql.yml.rej  rhiza_release.yml  rhiza_release.yml.rej  rhiza_smoke.yml  rhiza_sync.yml  rhiza_sync.yml.rej  rhiza_validate.yml  rhiza_weekly.yml.rej  sym2.yml
.rhiza/: .rhiza-version  history  rhiza.mk  template.yml
.rhiza/make.d/: book.mk  book.mk.rej  docs.mk  docs.mk.rej  test.mk
.rhiza/requirements/: README.md
.rhiza/scripts/: generate-pr-description.py
.rhiza/tests/: conftest.py
.rhiza/tests/api/: conftest.py  test_make_variable_overrides.py  test_makefile_api.py  test_makefile_targets.py
.rhiza/tests/structure/: test_project_layout.py
.rhiza/tests/sync/: conftest.py
assets/: coverage-summary.json
docs/: AUTHENTICATION.md  GLOSSARY.md  analysis.md  architecture.md
docs/adr/: 0001-inline-get-diff-instead-of-cruft.md  0002-repository-ref-as-canonical-keys.md  0003-lock-file-concurrency.md  0004-keep-git-utils-as-single-module.md  0005-split-git-engine-into-subpackage.md  0006-rhiza-cli-as-claude-plugin.md  README.md
docs/development/: REPOSITORY_ANALYSIS.md
src/rhiza/: __init__.py  __main__.py  _sync_helpers.py  bundle_resolver.py  cli.py  language_validators.py  models.py  subprocess_utils.py
src/rhiza/_templates/basic/: Makefile.jinja2  main.py.jinja2  mkdocs.yml.jinja2  pyproject.toml.jinja2  template.yml.jinja2  (+1 more)
src/rhiza/commands/: __init__.py  _init_helpers.py  _init_host.py  _summarise_render.py  _sync_helpers.py  _validate_helpers.py  diff.py  init.py  inject.py  list_repos.py  lock.py  materialize.py  migrate.py  status.py  summarise.py  sync.py  tree.py  ui.py  uninstall.py  validate.py  versions.py  welcome.py
src/rhiza/models/: __init__.py  _base.py  _git_utils.py  _profile_resolver.py  bundle.py  lock.py  template.py
src/rhiza/ui/: __init__.py  git_scanner.py  server.py  tui.py
tests/: conftest.py  test_bundle_model.py  test_bundle_resolver.py  test_cli_commands.py  test_git_utils.py  test_init.py  test_language_field.py  test_language_validators.py  test_lock_model.py  test_models.py  test_package.py  test_subprocess_utils.py  test_template_model.py  test_validate.py  test_version_normalization.py
tests/benchmarks/: test_benchmarks.py
tests/fuzz/: fuzz_model_parse.py
tests/test_commands/: conftest.py  test_init.py  test_init_e2e.py  test_init_language.py  test_list_repos.py  test_materialize.py  test_materialize_bundles.py  test_materialize_symlinks.py  test_migrate.py  test_status.py  test_summarise.py  test_sync.py  test_sync_core.py  test_sync_e2e.py  test_sync_symlinks.py  test_tree.py  test_ui.py  test_uninstall.py  test_validate.py  test_versions.py
tests/test_models/: __init__.py  test_bundle_model.py  test_git_engine.py  test_lock_model.py  test_models_comprehensive.py  test_profile_resolver.py  test_template_model.py
tests/test_rhiza/: conftest.py  test_bump_script.py  test_git_repo_fixture.py  test_makefile.py  test_marimushka_script.py  test_pr_description_script.py  test_readme.py  test_release_script.py  test_rhiza_workflows.py  test_tui.py
(+13 files in other folders)
