[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rhiza"
version = "0.10.2"
description = "Reusable configuration templates for modern Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Thomas Schmelzer" }
]
keywords = ["templates", "configuration", "taskfile", "ci", "ruff"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "loguru>=0.7.3",
    "typer>=0.20.0",
    "PyYAML==6.0.3",
    "jinja2>=3.1.0"
]

[project.urls]
Homepage = "https://github.com/jebel-quant/rhiza-cli"
Repository = "https://github.com/jebel-quant/rhiza-cli"
Issues = "https://github.com/jebel-quant/rhiza/issues-cli"

[project.optional-dependencies]
tools = ["rhiza-tools>=0.1.2"]

[dependency-groups]
dev = [
    "numpy>=2.4",
    "marimo>=0.18.0",
    "pandas>=2.3",
    "plotly>=6.5",
]

[tool.hatch.build.targets.wheel]
# Use src-layout: package code is under src/config
packages = ["src/rhiza"]

[tool.deptry.package_module_name_map]
PyYAML = "yaml"
loguru = "loguru"
typer = "typer"
jinja2 = "jinja2"
rhiza-tools = "rhiza_tools"
numpy = "numpy"
marimo = "marimo"
pandas = "pandas"
plotly = "plotly"

[tool.marimo.runtime]
pythonpath = ["src"]

[project.scripts]
rhiza = "rhiza.__main__:app"

[tool.deptry.per_rule_ignores]
DEP002 = ["rhiza-tools"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "loguru",
    "typer",
    "jinja2",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rhiza.cli"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "rhiza.__main__"
disallow_untyped_decorators = false
